Fix z-index

--- a/frontend/src/components/toolbar/toolbar.module.scss
+++ b/frontend/src/components/toolbar/toolbar.module.scss
@@ -10,5 +10,5 @@
   color: $white;
   font-size: $font-s;
   box-shadow: 5px 5px 10px 0 rgba($color: #000000, $alpha: 0.2);
-  z-index: 100000;
+  z-index: 1000;
 }
